Enhancements to Authentication and User Management Services
- Password & PIN Policy Integration: Added support for enforcing password, PIN, OTP, and related policies in the AuthenticationService and UserService. All passwords must now pass through the policy validation before they can be added or updated.

- PIN Management: Introduced functionality to change and request a PIN through the UserController. Additionally, added validation to check for past PINs as part of the PIN policy.

- User Blocking: Implemented automatic user account blocking based on policy violations within the AuthenticationService.

- JOOQ Update: Updated the JOOQ folder to accommodate recent changes in the JOOQ version.